@@ -283,4 +283,39 @@ public final class Tools {
     }
   }
 
+  /**
+   * Enable and disable bitext rules.
+   * @param bRules List of all bitext rules
+   * @param disabledRules ids of rules to be disabled
+   * @param enabledRules ids of rules to be enabled (by default all are enabled)
+   * @param useEnabledOnly if set to {@code true}, if set to {@code true}, disable all rules except those enabled explicitly.
+   * @return the list of rules to be used.
+   */
+  public static List<BitextRule> selectBitextRules(final List<BitextRule> bRules, final List<String> disabledRules, final List<String> enabledRules, boolean useEnabledOnly) {
+    List<BitextRule> newBRules = new ArrayList<>(bRules.size());
+    newBRules.addAll(bRules);
+    if (useEnabledOnly) {
+      List<BitextRule> rulesToBeDisabled = new ArrayList<>();
+      for (final String enabledRule : enabledRules) {
+        for (BitextRule b : bRules) {
+          if (!b.getId().equals(enabledRule)) {
+            rulesToBeDisabled.add(b);
+          }
+        }
+      }
+      newBRules.removeAll(rulesToBeDisabled);
+    } else {
+      List<BitextRule> rulesToDisable = new ArrayList<>();
+      for (final String disabledRule : disabledRules) {
+        for (final BitextRule b : newBRules) {
+          if (b.getId().equals(disabledRule)) {
+            rulesToDisable.add(b);
+          }
+        }
+      }
+      newBRules.removeAll(rulesToDisable);
+    }
+    return newBRules;
+  }
+
 }
