@@ -58,6 +58,8 @@ LanguageTool Change Log
      also get an error message because of the request limit.
     -fix response of After the Deadline mode: <description>...</description> was
      sometimes empty, confusing the text check in WordPress
+    -bitext rules were not disabled properly, even if they were specified with a
+     proper parameter for the server; now it's fixed
 
 Internal:
     -Words are not ignored anymore by the spell checker just because they occur in
